# studyRAG

./: .env.example  .gitignore  README.md  README_WINDOWS.md  SETUP.md  chat_rag.py  dev-setup.py  fix_uv.bat  fix_uv_windows.ps1  main.py  pyproject.toml  quick-start.md  run.sh  setup.bat  setup.ps1  setup.py  setup.sh  start.py  start.sh  start_studyrag.py  test-setup.py
app/: __init__.py  main.py
archive/: migrate_to_monorepo.sh  requirements.txt
docs/: CLEANUP_SUMMARY.md  INTERFACE_REACT_README.md  KIRO_STEERING_SETUP.md  ORGANIZATION.md  QUICK_START.md  README.md  TROUBLESHOOTING_STEPS.md  UI_COMPLETION_SUMMARY.md  UI_README.md  VERIFICATION_GUIDE.md
examples/: chat_engine_demo.py  search_engine_demo.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
ingestion/: embedder.py
scripts/: README.md  clean_before_push.sh  hybrid_search.py  ingest_simple.py  post_setup_check.py  run_test.py  test_chunking.py  test_embedding_models.py  test_evaluation.py  test_ollama_setup.py  test_pdf_simple.py  test_simple_export.py  test_ui_manual.py  upgrade_embeddings.py  verify_implementation.py
test_files/: guide_utilisation.md  test_document.txt
test_samples/: README.md  test_document.docx  test_document.html  test_document.md
tests/: __init__.py  test_api_integration.py  test_chat_api.py  test_chat_api_integration.py  test_chat_api_simple.py  test_chat_engine.py  test_chat_integration.py  test_config.py  test_config_api.py  test_config_integration.py  test_config_management.py  test_conversation_manager.py  test_models.py  (+20 more)
(+100 files in other folders)
